<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:elevation="@dimen/post_card_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/post_linear_padding">

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="2dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_profile"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_profile"/>

                <TextView
                    android:id="@+id/tv_post_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/gray"
                    android:text="@string/post_date"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="2dp"
                android:paddingLeft="7dp"
                android:paddingRight="4dp">

                <TextView
                    android:id="@+id/tv_auth_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/post_auth_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/tv_post_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/post_title_label"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/img_post"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_launcher_background"
                    android:scaleType="fitXY"
                    android:layout_marginTop="20dp"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:layout_marginLeft="70dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_favorite_border"/>
                <TextView
                    android:layout_marginLeft="3dp"
                    android:id="@+id/tv_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likes"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_comment"/>
                <TextView
                    android:layout_marginLeft="3dp"
                    android:id="@+id/tv_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp">
            <LinearLayout
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorDarkBackground">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_profile"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_first_comment_auth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/post_comment_auth"
                        android:layout_marginTop="15dp"
                        android:textSize="14sp"
                        android:textColor="@color/colorBlack" />
                    <TextView
                        android:id="@+id/tv_first_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/post_comment"
                        android:maxLines="4"
                        android:layout_marginTop="8dp"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>