<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailsActivity.DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="20dp"
            app:expandedTitleMarginStart="20dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <ImageView
                    android:id="@+id/img_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:background="@color/colorBlack" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/wave"
                    android:layout_alignParentBottom="true"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentBottom="true">
                <TextView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:textSize="9sp"
                    android:textStyle="bold"
                    android:text="@string/wave_date"/>

                    <LinearLayout
                        android:layout_width="1.5dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="8dp"
                        android:background="@color/gray"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="4dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            android:text="@string/wave_tomorro"/>

                        <TextView
                            android:layout_width="35dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gray"
                            android:gravity="center"
                            android:layout_marginTop="3dp"
                            android:textSize="9sp"
                            android:textStyle="bold"
                            android:text="@string/wave_going"/>
                    </LinearLayout>



                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_profile"
                        android:layout_marginLeft="30dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="6dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wave_hazoom"
                            android:textSize="9sp"
                            android:textColor="@color/gray"/>
                        <RatingBar
                            android:id="@+id/rating_bar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:stepSize="0.5"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_textview"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="70dp"
                    android:layout_marginRight="20dp"
                    android:elevation="15dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/circle_price"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:textColor="@color/blue"/>

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/white"
            app:tabMaxWidth="0dp"
            app:tabGravity="fill"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed" />

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.view.ViewPager
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</android.support.design.widget.CoordinatorLayout>